# Unified-Game-Engine

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  Makefile  README.md  Win.bat  Winshrt.bat  init.sh  mainDev.cpp  mainEmpty.cpp  mainOld.cpp  todo
doxygen/: Doxyfile
inc/Unified-Engine/: debug.h  includeGL.h
inc/Unified-Engine/Core/: config.h  gameInteractionObject.h  instance.h  time.h
inc/Unified-Engine/Core/Display/: color.h  window.h
inc/Unified-Engine/Core/Rendering/: shader.h
inc/Unified-Engine/Debug/: Debugger.h
inc/Unified-Engine/Objects/: camera.h  gameObject.h  objectComponent.h  scriptObject.h  skybox.h
inc/Unified-Engine/Objects/Components/: collider.h  material.h  rigidbody.h  shaderArgument.h  shaderObject.h  texture2d.h  transform.h
inc/Unified-Engine/Objects/Mesh/: mesh.h
inc/Unified-Engine/Objects/Mesh/Defaults/: cube.h
inc/Unified-Engine/UI/: UIContoller.h
inc/Unified-Engine/UI/Elements/: Element.h  Panel.h
inc/Unified-Engine/Utility/: EasingFunctions.h  Utility.h
inc/Unified-Engine/input/: input.h  keyboard.h  mouse.h
inc/UnifiedEngine/: Example.h  Include.h
inc/UnifiedEngine/Audio/: Mixer.h  Sound.h  Source.h
inc/UnifiedEngine/Core/Debuging/: Debugger.h
inc/UnifiedEngine/Core/Game/: Game.h  GlobalSettings.h
inc/UnifiedEngine/Core/Game/Timing/: Time.h
inc/UnifiedEngine/Core/Input/: Input.h  InputInfo.h  Keyboard.h  Mouse.h
inc/UnifiedEngine/Core/OpenGL/: Configure.h  Initiate.h  OpenGLInc.h
inc/UnifiedEngine/Core/Renderer/: Camera.h  Framebuffer.h  PixelRender.h  RenderBuffer.h  RenderInfo.h  Renderer.h  Shader.h
inc/UnifiedEngine/Core/Window/: Console.h  Window.h
inc/UnifiedEngine/Maths/: Maths.h
inc/UnifiedEngine/Object/: GameObject.h  Skybox.h
inc/UnifiedEngine/Object/Components/: Color.h  Componenting.h  Mesh.h  Parent.h  Resources.h  Transforms.h
inc/UnifiedEngine/Scenes/: Scene.h
inc/UnifiedEngine/UI/: Canvas.h
inc/UnifiedEngine/UI/Images/: Image.h
inc/UnifiedEngine/UI/Text/: Font.h  Label.h
inc/glad/: glad.h
rsc/: testFragment.glsl  testUIFrag.glsl  testUIVert.glsl  testVertex.glsl  text.frag.glsl
src/: glad.c  main.cpp  mainMacOSTest.cpp
src/Core/: config.cpp  instance.cpp  time.cpp
src/Core/Display/: window.cpp
src/Core/Rendering/: shader.cpp
src/Debug/: Debugger.cpp
src/Objects/: ObjectComponent.cpp  camera.cpp  gameObject.cpp  mesh.cpp  skybox.cpp
src/Objects/Components/: collider.cpp  material.cpp  rigidBody.cpp  shaderObject.cpp  texture2d.cpp  transform.cpp
src/UI/: UIContoller.cpp
src/UI/Elements/: Element.cpp  Panel.cpp
src/Utility/: Utility.cpp
src/input/: input.cpp  keyboard.cpp  mouse.cpp
